# learn_c

./: README.md
chapter_01_C语言概述/: 01_程序语言简述.md  02_C语言简述.md
chapter_02_算法/: 01_算法的基本概念.md
chapter_03_数据类型/: 01_编程规范.md  02_关键字.md  03_标识符.md  04_数据类型.md  05_常量.md  06_变量.md  07_变量的存储类别.md  08_混合运算.md
chapter_04_运算符与表达式/: 01_表达式.md  02_赋值运算符与赋值表达式.md  03_算术运算符与算术表达式.md  04_关系运算符与关系表达式.md  05_逻辑运算符与逻辑表达式.md  06_逗号运算符与逗号表达式.md  07_复合运算符.md  08_条件运算符.md  08_运算符的优先级.md  09_运算符的优先级.md
chapter_05_常用数据IO函数/: 01_语句.md  02_字符数据的IO.md  03_字符串的IO.md  04_格式输出函数.md  05_格式输入函数.md
chapter_06_选择控制结构/: 01_if语句.md  02_if语句的基本形式.md  03_if语句的嵌套形式.md  04_switch语句.md  04_条件运算符.md  05_if_else语句和switch语句的区别.md  05_switch语句.md  06_if_else语句和switch语句的区别.md
chapter_07_循环控制结构/: 01_循环语句.md  02_while语句.md  03_do_while语句.md  04_for语句.md  05_3种循环语句的比较.md  06_循环嵌套.md  07_转移语句.md
chapter_08_数组/: 01_一维数组.md  02_二维数组.md  03_字符数组.md  04_多维数组.md  05_选择排序.md  06_冒泡排序.md  07_交换排序.md  08_插入排序.md  09_折半排序.md
chapter_09_函数/: 01_函数的概述.md  02_函数的定义和声明.md  03_函数参数.md  04_函数的调用和返回.md  05_内部函数和外部函数.md  06_局部变量和全局变量.md  07_常用函数.md
chapter_10_指针/: 01_指针相关概念.md  02_数组与指针.md  03_指向指针的指针.md  04_指针变量作为函数参数.md  05_返回指针值的函数.md  06_指针数组作main函数的参数.md
chapter_11_结构体和共用体/: 01_结构体.md  02_结构体数组.md  03_结构体指针.md  04_嵌套的结构体.md  05_共用体.md  06_枚举类型.md
chapter_12_位运算/: 01_位与字节.md  02_位运算操作符.md
chapter_13_预处理/: 01_宏定义.md  02_#include_命令.md  03_条件编译.md
chapter_14_文件/: 01_文件概述.md  02_文件基本操作.md  03_文件的读写.md  04_文件的定位.md
chapter_15_存储管理/: 01_内存组织方式.md  02_动态管理.md  03_内存泄露与内存丢失.md
code/: .clang-format  CMakeLists.txt
code/chapter_01/: 01_hello_c.c
code/chapter_03/: 01_constant.c  01_print_datatype_scope.c  02_mixed_operations.c  02_print_datatype_scope.c  03_variable.c  04_auto_modifier.c  05_static_modifier.c  06_register_modifier.c  07_extern_modifier_01.c  08_extern_modifier_02.c  09_mixed_operations.c
code/chapter_04/: 01_type_conversion.c  02_arithmetic_operators.c  03_relational_operators.c  04_logical_operators.c  05_comma_operator.c  06_compound_operator.c  07_conditional_operators.c
code/chapter_05/: 01_char_io.c  02_string_io.c  03_format_output.c  04_format_input.c
code/chapter_06/: 01_if_statement.c  02_switch_statement.c
code/chapter_07/: 01_while_loop.c  02_do_while_loop.c  03_for_loop.c  04_nested_loop.c  05_print_multiplication_table.c
code/chapter_08/: 01_1d_array.c  02_2d_array.c  03_char_array.c  04_md_array.c  05_transpose_array.c  06_selection_sort.c  07_bubble_sort.c  08_quick_sort.c  09_insertion_sort.c  10_binary_insertion_sort.c
code/chapter_09/: 01_function.c  02_static_function.c  03_extern_function_01.c  04_extern_function_02.c  05_local_variable.c  06_global_variable.c  07_generally_used_functions.c
code/chapter_10/: 01_print_address.c  02_pointer_and_array.c  03_point_pointer.c  04_swap_value.c  05_return_pointer.c
code/chapter_11/: 01_struct_type.c  02_union_type.c  03_enum_type.c
code/chapter_12/: 01_bit_and_byte.c  02_bitwise_operators.c
code/chapter_13/: 01_macro_definition.c  02_include.c  02_include.h  03_conditional_compilation.c
code/chapter_14/: 01_file_operations.c  input.txt
code/chapter_15/: 01_memory_management.c
code/exam_code/: exam.c
code/final_exam_code/: code_filling_01.c  code_filling_02.c  code_reading_01.c  code_reading_02.c  code_reading_03.c  coding_01.c  coding_02.c  coding_03.c
exam/: C语言程序设计期末题.md
final_exam/: C语言程序设计期末题.md  C语言程序设计期末题答案.md
